--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -130,39 +130,8 @@
 
 
     {% if config.leaflet_sidebar.enabled %}
-      <div id="sidebar" class="sidebar collapsed">
-        <!-- Nav tabs -->
-        <div class="sidebar-tabs">
-          <ul role="tablist">
-            <li><a href="#legend-pane" role="tab"><i class="fa fa-info-circle"></i></a></li>
-            <li><a href="#layers-pane" role="tab"><i class="fa fa-map-o"></i></a></li>
-            <li><a href="#activity-stream-pane" role="tab"><i class="fa fa-comments-o"></i></a></li>
-          </ul>
-        </div>
-
-        <!-- Tab panes -->
-        <div class="sidebar-content">
-          <!-- Legend Panel (Shareabouts Layers_) -->
-          <div class="sidebar-pane" id="legend-pane">
-            <h1 class="sidebar-header">Legend:<span class="sidebar-close"><i class="fa fa-chevron-left"></i></span></h1>
-            <div id="master-legend"></div>
-          </div>
-
-          <!-- Layers Panel (GIS Layers) -->
-          <div class="sidebar-pane" id="layers-pane">
-            <h1 class="sidebar-header">Map Layers:<span class="sidebar-close"><i class="fa fa-chevron-left"></i></span></h1>
-            <div id="layers-container"></div>
-          </div>
-
-          <!-- Activity Stream Panel -->
-          <div class="sidebar-pane" id="activity-stream-pane">
-            <h1 class="sidebar-header">Activity Stream<span class="sidebar-close"><i class="fa fa-chevron-left"></i></span></h1>
-            <div id="ticker">
-              <ul class="recent-points unstyled-list"></ul>
-            </div>
-          </div>
-
-        </div>
+      <div id="leaflet-sidebar" class="sidebar collapsed">
+      {% block leaflet_sidebar %}{% endblock %}
       </div>
     {% endif %}
 
@@ -224,8 +193,7 @@
   <!-- https://github.com/openplans/handlebars-helpers -->
   <script src="{{STATIC_URL}}libs/handlebars-helpers.js"></script>
   <script src="//cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
-  <script src="{{STATIC_URL}}libs/leaflet.argo.js"></script>
-  <script src="{{STATIC_URL}}libs/leaflet.sidebar.js"></script>
+  <script src="{{STATIC_URL}}libs/leaflet-sidebar.js"></script>
   {% else %}
   <!--   TODO: build libraries with npm instead of bower -->
   <script src="{{STATIC_URL}}dist/lib-bundle.js?ver=0.6"></script>
