add leaflet-sidebar view

--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -275,6 +275,7 @@
   <script src="{{STATIC_URL}}js/views/geocode-address-view.js"></script>
   <script src="{{STATIC_URL}}js/views/geocode-address-place-view.js"></script>
   <script src="{{STATIC_URL}}js/views/legend-view.js"></script>
+  <script src="{{STATIC_URL}}js/views/leaflet-sidebar-view.js"></script>
   <script src="{{STATIC_URL}}js/routes.js"></script>
   {% else %}
   <script src="{{STATIC_URL}}dist/bundle.js?ver=0.6"></script>
