--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -172,6 +172,9 @@ hr {
 .btn-small {
   font-size: 0.75em;
 }
+.btn-selected {
+  background-color: #007fbf;
+}
 .report-type-btn {
   text-transform: none;
   background-color: rgba(242, 82, 24, 0.29)
