--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1841,8 +1841,8 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     font-size: 1.25em;
     padding: 0;
     position: absolute;
-    left: 1.5em;
-    bottom: 2em;
+    top: 2em;
+    right: 2em;
     box-shadow: none;
     border-bottom: 0;
   }
