plugging in proper components for leaflet sidebar config

--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -130,9 +130,7 @@
 
 
     {% if config.leaflet_sidebar.enabled %}
-      <div id="leaflet-sidebar" class="sidebar collapsed">
-      {% block leaflet_sidebar %}{% endblock %}
-      </div>
+      <div id="leaflet-sidebar" class="sidebar collapsed sidebar-left leaflet-touch"></div>
     {% endif %}
 
 
