--- a/src/sa_web/static/css/leaflet-sidebar.css
+++ b/src/sa_web/static/css/leaflet-sidebar.css
@@ -6,7 +6,7 @@
   overflow: hidden;
   z-index: 2000; }
   .sidebar.collapsed {
-    width: 34px; }
+    width: 33px; }
   @media (min-width: 768px) {
     .sidebar {
       top: 194px;
@@ -46,16 +46,17 @@
     right: 0; }
   .sidebar-tabs, .sidebar-tabs > ul {
     position: absolute;
-    width: 40px;
+    width: 33px;
     margin: 0;
     padding: 0; }
     .sidebar-tabs > li, .sidebar-tabs > ul > li {
       width: 100%;
-      height: 40px;
+      height: 33px;
       color: #333;
       font-size: 12pt;
       overflow: hidden;
-      transition: all 80ms; }
+      transition: all 80ms;
+      padding-bottom: 0.25em; }
       .sidebar-tabs > li:hover, .sidebar-tabs > ul > li:hover {
         color: #000;
         background-color: #eee; }
