--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -130,7 +130,38 @@
 
 
     {% if config.leaflet_sidebar.enabled %}
-      <div id="leaflet-sidebar" class="sidebar collapsed sidebar-left leaflet-touch"></div>
+      <div id="sidebar" class="sidebar collapsed">
+        <!-- Nav tabs -->
+        <div class="sidebar-tabs">
+            <ul role="tablist">
+                <li><a href="#legend" role="tab"><i class="fa fa-info-circle"></i></a></li>
+                <li><a href="#layers" role="tab"><i class="fa fa-map-o"></i></a></li>
+                <li><a href="#activity-stream" role="tab"><i class="fa fa-comments-o"></i></a></li>
+            </ul>
+        </div>
+
+        <!-- Tab panes -->
+        <div class="sidebar-content">
+            <div class="sidebar-pane" id="legend">
+                <h1 class="sidebar-header">Legend<span class="sidebar-close"><i class="fa fa-chevron-left"></i></span></h1>
+            </div>
+
+            <div class="sidebar-pane" id="layers">
+                <h1 class="sidebar-header">Layers<span class="sidebar-close"><i class="fa fa-chevron-left"></i></span></h1>
+            </div>
+
+            <div class="sidebar-pane" id="activity-stream">
+                <h1 class="sidebar-header">Activity Stream
+                  <span class="sidebar-close"><i class="fa fa-chevron-left"></i></span>
+                </h1>
+
+                <div id="ticker">
+                <p>Activity Stream</p>
+                <ul class="recent-points unstyled-list"></ul>
+              </div>
+            </div>
+        </div>
+      </div>
     {% endif %}
 
 
@@ -148,7 +179,7 @@
       <!--<header>Master Legend</header>-->
     <!-- </div> -->
    {% endif %}
-  <!-- </div> -->
+  </div>
  {% endif %}
 
   <div id="list-container"></div>
