--- a/src/sa_web/static/css/leaflet-sidebar.css
+++ b/src/sa_web/static/css/leaflet-sidebar.css
@@ -15,13 +15,13 @@
       transition: width 500ms; } }
   @media (min-width: 768px) and (max-width: 991px) {
     .sidebar {
-      width: 305px; } }
+      width: 300px; } }
   @media (min-width: 992px) and (max-width: 1199px) {
     .sidebar {
-      width: 390px; } }
+      width: 300px; } }
   @media (min-width: 1200px) {
     .sidebar {
-      width: 460px; } }
+      width: 300px; } }
 
 .sidebar-left {
   left: 0; }
@@ -56,7 +56,7 @@
       font-size: 12pt;
       overflow: hidden;
       transition: all 80ms;
-      padding-bottom: 0.25em; }
+      padding-bottom: unset; }
       .sidebar-tabs > li:hover, .sidebar-tabs > ul > li:hover {
         color: #000;
         background-color: #eee; }
@@ -73,7 +73,7 @@
         display: block;
         width: 100%;
         height: 100%;
-        line-height: 40px;
+        line-height: 33px;
         color: inherit;
         text-decoration: none;
         text-align: center; }
@@ -88,11 +88,11 @@
   overflow-x: hidden;
   overflow-y: auto; }
   .sidebar-left .sidebar-content {
-    left: 40px;
+    left: 33px;
     right: 0; }
   .sidebar-right .sidebar-content {
     left: 0;
-    right: 40px; }
+    right: 33px; }
   .sidebar.collapsed > .sidebar-content {
     overflow-y: hidden; }
 
@@ -101,35 +101,35 @@
   left: 0;
   right: 0;
   box-sizing: border-box;
-  padding: 10px 20px; }
+  padding: 10px 10px; }
   .sidebar-pane.active {
     display: block; }
   @media (min-width: 768px) and (max-width: 991px) {
     .sidebar-pane {
-      min-width: 265px; } }
+      min-width: 260px; } }
   @media (min-width: 992px) and (max-width: 1199px) {
     .sidebar-pane {
-      min-width: 350px; } }
+      min-width: 260px; } }
   @media (min-width: 1200px) {
     .sidebar-pane {
-      min-width: 420px; } }
+      min-width: 260px; } }
 
 .sidebar-header {
   margin: -10px -20px 0;
-  height: 40px;
+  height: 33px;
   padding: 0 20px;
-  line-height: 40px;
+  line-height: 33px;
   font-size: 14.4pt;
   color: #fff;
   background-color: #0074d9; }
   .sidebar-right .sidebar-header {
-    padding-left: 40px; }
+    padding-left: 33px; }
 
 .sidebar-close {
   position: absolute;
   top: 0;
-  width: 40px;
-  height: 40px;
+  width: 33px;
+  height: 33px;
   text-align: center;
   cursor: pointer; }
   .sidebar-left .sidebar-close {
