--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1060,9 +1060,9 @@ ul.recent-points {
 -------------------------------------------------------------- */
 #master-legend {
   overflow: visible;
-  padding-left: 1em;
-  padding-right: 1em;
-  padding-top: 1em;
+  padding-left: unset;
+  padding-right: unset;
+  padding-top: unset;
   /*display: none;*/
 }
 /* All layers in the Master Legend list */
@@ -1210,6 +1210,10 @@ ul.recent-points {
   vertical-align: top;
   margin-right: 8px;
 }
+/*#legend-container .legend-layer-li img {
+  width: 2em;
+  height: auto;
+}*/
 
 /* =List View
 -------------------------------------------------------------- */
