(mostly-) fully-functional new sidebar!
There are still two checkboxes in the map layers that don't seem to be
rendering:
 - River cleanup plan
 - Original river path

 Also, there's still some CSS work to be done regarding different screen sizes.

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1138,9 +1138,9 @@ ul.recent-points {
 -------------------------------------------------------------- */
 #master-legend {
   overflow: visible;
-  padding-left: 1em;
-  padding-right: 1em;
-  padding-top: 1em;
+  padding-left: unset;
+  padding-right: unset;
+  padding-top: unset;
   /*display: none;*/
 }
 /* All layers in the Master Legend list */
@@ -1288,6 +1288,10 @@ ul.recent-points {
   vertical-align: top;
   margin-right: 8px;
 }
+/*#legend-container .legend-layer-li img {
+  width: 2em;
+  height: auto;
+}*/
 
 /* =List View
 -------------------------------------------------------------- */
