Sidebar updates: closing, legend
The entire blue heading bar of an opened sidebar panel can now be
clicked in order to close the panel; no longer just the chevron.

Pulled the legend icons down away from the panel header.

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1140,7 +1140,7 @@ ul.recent-points {
   overflow: visible;
   padding-left: unset;
   padding-right: unset;
-  padding-top: unset;
+  padding-top: 10px;
   /*display: none;*/
 }
 /* All layers in the Master Legend list */
