Revert "Revert "Merge pull request #245 from smartercleanup/goldpbear/dynamicFormLogic""
This reverts commit 053b30c4af0a92ebff69635f32436d0fc4b9455e.

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -172,6 +172,21 @@ hr {
 .btn-small {
   font-size: 0.75em;
 }
+.btn-selected {
+  background-color: #007fbf;
+}
+.report-type-btn {
+  text-transform: none;
+  background-color: rgba(242, 82, 24, 0.29)
+}
+.btn-secondary-selected {
+  background-color: rgba(242, 82, 24, 0.89)
+}
+.category-change-btn {
+  margin-right: 20px;
+  margin-bottom: 10px;
+  width: 40%;
+}
 
 /* Forms */
 form {
@@ -263,12 +278,75 @@ select {
   clear: both;
   padding: 1em;
 }
-
 .form-field {
   margin: 0 0 1em;
 }
 
-/* Images */
+/* large checkbox graphic radio buttons */
+/* http://cssdeck.com/labs/ldmtsmfk */
+.big-btn:empty + label {
+  position: relative;
+  float: left;
+  line-height: 2.5em;
+  text-indent: 3.25em;
+  margin-top: 5px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  color: #999999;
+}
+.big-btn:empty + label:before {
+  position: absolute;
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 2.5em;
+  background: #D1D3D4;
+  border-radius: 1px 0 0 1px;
+}
+.big-btn + label {
+  border-radius: 4px;
+  padding-right: 10px;
+  border: 2px solid #D1D3D4
+}
+.big-btn:hover:not(:checked) + label:before {
+  content:'\2714';
+  text-indent: .9em;
+  color: #EEEEEE;
+}
+.big-btn:hover:not(:checked) + label {
+  color: #444444;
+}
+.big-btn:checked + label:before {
+  content:'\2714';
+  text-indent: .9em;
+  color: #FFFFFF;
+  background-color: rgba(242, 82, 24, 0.89)
+}
+.big-btn:checked + label {
+  color: #222222;
+  font-weight: bold;
+  border: 2px solid rgba(242, 82, 24, 0.89)
+}
+.big-btn {
+  display:none;
+}
+#category-btns {
+  margin-bottom: 20px;
+}
+.category-btn-label {
+  text-transform: uppercase;
+  font-size: 1em;
+  width: 250px;
+}
+
+/* Imag
+
+es */
 img {
   max-width: 100%;
   height: auto;
