Increased responsivity and prettiness of sidebar
- Sidebar aesthetics match other leaflet controls
  -- Removed box-shadow
  -- Added border and background-clip
- Moved sidebar inside of <map-container> so its top/bottom
  properties are anchored to that element, not parent container
- Began process of making page take up the full height of the
  screen when on mobile since the tracker no longer exists beneath
  the map container

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -2,9 +2,10 @@
 -------------------------------------------------------------- */
 
 html {
+  min-height: 100%;
 }
 body {
-  min-height: 100%;
+  height: 100%;
   text-align: left;
 }
 
