--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -136,9 +136,9 @@
           <!-- Nav tabs -->
           <div class="sidebar-tabs">
             <ul role="tablist">
-              <li><a href="#legend-pane" role="tab"><i class="fa fa-info-circle"></i></a></li>
-              <li><a href="#layers-pane" role="tab"><i class="fa fa-map-o"></i></a></li>
+              <li><a href="#layers-pane" role="tab"><i class="fa fa-list"></i></a></li>
               <li><a href="#activity-stream-pane" role="tab"><i class="fa fa-comments-o"></i></a></li>
+              <li><a href="#legend-pane" role="tab"><i class="fa fa-info-circle"></i></a></li>
             </ul>
           </div>
 
