--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -534,7 +534,6 @@ a.logout-btn {
 }
 
 #new-place-mask-fill {
-  content: '';
   position: absolute;
   /*left: 38%; 
   top: 32%;*/
@@ -1854,7 +1853,7 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     position: absolute;
     top: 4em; /* height of #site-header */
     right: 0;
-    bottom: 1.75em;
+    bottom: 0;
     left: 0;
   }
   .content-visible #map-container {
