add workaround for IE opacity

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -530,7 +530,11 @@ a.logout-btn {
   height: 100%;
   width: 100%;
   margin: 0 auto;
-  opacity: .4;
+  /* for IE */
+  filter: alpha(opacity=40);
+  -moz-opacity:0.4;
+  -khtml-opacity: 0.4;
+  opacity: 0.4;
 }
 
 #new-place-mask-fill {
