Added CSS to constrain size of iframe, object, and embed objects.
Isses #258 needed someway to control size of video embeds in content.
This fix controls the width of the object.

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -776,6 +776,16 @@ a.close-btn span {
   top: -0.2em;
 }
 
+/* Contains embeded video player size */
+#content iframe,
+#content object,
+#content embed{
+  overflow: hidden;
+  display: block;
+  width: 100% !important;
+  height: auto !important;
+}
+
 /* Promotion: Voting & Sharing */
 .promotion {
   float: right;
