--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1627,11 +1627,13 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
 /* iphone 4 (320 x 480)*/
 @media only screen and (min-height: 440px) and (max-width: 60em) {
   #map {
-    height: 292px;
+    height: 100%;
   }
+  /*
   .content-visible #map {
     height: 175px;
   }
+  */
   #site-title a:link,
   #site-title a:visited {
     font-size: 1.8em;
@@ -1649,8 +1651,14 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
   /*}*/
 /*}*/
 @media only screen and (min-height: 480px) and (max-width: 60em) {
-  #map {
-    height: 332px;
+  html, body {
+    height: 100%;
+  }
+  #main, #map {
+    height: 100%;
+  }
+  #map-container {
+    height: calc(100% - 136px);
   }
   #site-title a:link,
   #site-title a:visited {
@@ -1661,51 +1669,99 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
 
 /*@media only screen and (min-width: 440px) and (max-height: 60em) and (orientation : landscape) {*/
 @media only screen and (min-width: 440px) and (min-height: 320px) and (orientation : landscape) {
-  #map {
-    height: 202px;
+  html, body {
+    height: 100%;
+  }
+  #main, #map {
+    height: 100%;
+  }
+  #map-container {
+    height: calc(100% - 136px);
   }
 }
 
 /* iphone 5 (320 x 568) */
 @media only screen and (min-height: 568px) and (max-width: 60em) {
-  #map {
-    height: 420px;
+  html, body {
+    height: 100%;
+  }
+  #main, #map {
+    height: 100%;
+  }
+  #map-container {
+    height: calc(100% - 136px);
   }
 }
 /*@media only screen and (min-height: 568px) and (max-width: 60em) and (orientation : landscape) {*/
 @media only screen and (min-width: 568px) and (min-height: 320px) and (orientation : landscape) {
-  #map {
-    height: 202px;
+  html, body {
+    height: 100%;
+  }
+  #main, #map {
+    height: 100%;
+  }
+  #map-container {
+    height: calc(100% - 136px);
   }
 }
 
 /* iphone 6 (375 x 667) */
 @media only screen and (min-height: 667px) and (max-width: 60em) {
-  #map {
-    height: 519px;
+  html, body {
+    height: 100%;
+  }
+  #main, #map {
+    height: 100%;
+  }
+  #map-container {
+    height: calc(100% - 136px);
   }
 }
 /*@media only screen and (min-width: 667px) and (max-height: 60em) and (orientation : landscape) {*/
 @media only screen and (min-width: 667px) and (min-height: 375px) and (orientation : landscape) {
-  #map {
-    height: 247px;
+  html, body {
+    height: 100%;
+  }
+  #main, #map {
+    height: 100%;
+  }
+  #map-container {
+    height: calc(100% - 136px);
   }
 }
 /* iphone 6 plus (414 x 736) */
 @media only screen and (min-height: 736px) and (max-width: 60em) {
-  #map {
-    height: 588px;
+  html, body {
+    height: 100%;
+  }
+  #main, #map {
+    height: 100%;
+  }
+  #map-container {
+    height: calc(100% - 136px);
   }
 }
 /*@media only screen and (min-width: 736px) and (max-width: 60em) and (orientation : landscape) {*/
 @media only screen and (min-width: 736px) and (min-height: 414px) and (orientation : landscape) {
-  #map {
-    height: 296px;
+  html, body {
+    height: 100%;
+  }
+  #main, #map {
+    height: 100%;
+  }
+  #map-container {
+    height: calc(100% - 136px);
   }
 }
 @media only screen and (min-height: 768px) and (max-width: 60em) {
-  #map {
-    height: 620px;
+  html, body {
+    height: 100%;
+  }
+  #main, #map {
+    height: 100%;
+  }
+  #map-container {
+    height: calc(100% - 136px);
   }
 }
 
@@ -1715,6 +1771,9 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
   body {
     height: 100%;
     position: relative;
+  }
+  #map-container {
+    height: 100%;
   }
 
   /* A helper to let the JS know what kind of layout we're using */
