--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1803,7 +1803,6 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     position: relative;
   }
 
-
   /* A helper to let the JS know what kind of layout we're using */
   body:after {
     content: "desktop";
@@ -1948,9 +1947,11 @@ browser height, but in portrait mode, we usually have ~30px of nav/status-bar, s
     margin-left: -18em;
     width: 40%;
   }
+  /*
   .activity-enabled.content-visible #map-container {
     width: 70%;
   }
+  */
   .geocoding-bar-enabled #map-container {
     top: 8.5em;
   }
