--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -285,7 +285,7 @@
     };
 
     function bootstrapCurrentUser(data) {
-      <!-- Handle the case when we are logged into the admin panel -->
+      // Handle the case when we are logged into the admin panel
       if (data && !data.avatar_url) data.avatar_url = "{{ STATIC_URL }}css/images/user-50.png"
       if (data && !data.name) data.name = data.username
       Shareabouts.bootstrapped.currentUser = data;
