make click-throughs on the spotlight possible

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -536,6 +536,7 @@ a.logout-btn {
 #spotlight-place-mask-fill {
   position: absolute;
   border-radius: 50%;
+  pointer-events: none;
 }
 
 #centerpoint.newpin .x {
