--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1120,6 +1120,15 @@ ul.recent-points {
   font-weight: normal;
   letter-spacing: 1px;
 }
+
+.layer-type-grouping-list {
+  margin-left: 10px;
+}
+
+.layer-type-grouping-list label {
+  font-size: 0.5em;
+}
+
 /* allows hover to be positioned on the 'layer-type-description' */
 .layer-type-list li {
   position: relative;
