Add TODO comment

--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -135,6 +135,7 @@
 
       {% if config.sidebar.enabled %}
         <div id="sidebar" class="sidebar collapsed">
+          <!-- TODO: Refactor these tabs/panes into a single view -->
           <!-- Nav tabs -->
           <div class="sidebar-tabs">
             <ul role="tablist">
